--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,61 +2,65 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/btnGotoSelectionMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#65000000"
     android:backgroundTint="#040000"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/etUsernameMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="52dp"
-        android:ems="12"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        android:hint="username"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivpfp" />
+        <ImageView
+            android:id="@+id/ivpfpMain"
+            android:layout_width="111dp"
+            android:layout_height="98dp"
 
-    <EditText
-        android:id="@+id/etPasswordMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="25dp"
-        android:ems="12"
-        android:hint="pass"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etUsernameMain" />
+            android:onClick="SelectPfp"
 
-    <ImageView
-        android:id="@+id/ivpfp"
-        android:layout_width="111dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="320dp"
+            android:src="@drawable/ic_launcher_foreground"
 
-        android:layout_marginTop="100dp"
-        android:onClick="SelectPfp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        android:src="@drawable/ic_launcher_foreground"
+        <EditText
+            android:id="@+id/etUsernameMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+            android:hint="username"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp" />
 
-    <Button
-        android:id="@+id/button4"
-        android:onClick="GotoSelection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:id="@+id/etPasswordMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:hint="pass"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            tools:layout_editor_absoluteX="10dp"
+            tools:layout_editor_absoluteY="70dp" />
+
+        <Button
+            android:id="@+id/btnLoginMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="login"
+            android:text="Login/signup"
+            tools:layout_editor_absoluteX="200dp"
+            tools:layout_editor_absoluteY="100dp" />
+
+        <Button
+            android:id="@+id/button4"
+            android:onClick="GotoSelection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
