--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -10,9 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="520dp"
-        android:layout_marginTop="150dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="٥٢٠dp"
+        tools:layout_editor_absoluteY="١٥٠dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
