--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -5,13 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Selection">
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/selection" />
     <Button
         android:id="@+id/button"
         android:onClick="Start"
         android:layout_width="179dp"
         android:layout_height="71dp"
         android:layout_marginStart="276dp"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="110dp"
         android:text="start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +28,7 @@
         android:layout_height="71dp"
         android:layout_marginStart="276dp"
         android:text="tutorial"
+        android:onClick="GotoTutorial"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -31,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="365dp"
         android:text="Back"
+        android:onClick="GotoLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
