--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,67 +2,66 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnGotoSelectionMain"
+    android:id="@+id/Login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#65000000"
+    android:background="#000000"
     android:backgroundTint="#040000"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <EditText
+        android:id="@+id/etUsernameMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="230dp"
 
-        <ImageView
-            android:id="@+id/ivpfpMain"
-            android:layout_width="111dp"
-            android:layout_height="98dp"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="#E40000"
+        android:ems="12"
+        android:hint="username"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            android:onClick="SelectPfp"
+    <EditText
+        android:id="@+id/etPasswordMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="230dp"
+        android:backgroundTint="#E40000"
+        android:ems="12"
+        android:hint="pass"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUsernameMain" />
 
-            android:src="@drawable/ic_launcher_foreground"
+    <Button
+        android:id="@+id/btnLoginMain"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="54dp"
+        android:backgroundTint="#E40000"
+        android:onClick="login"
 
-            tools:ignore="SpeakableTextPresentCheck" />
+        android:text="Login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPasswordMain" />
 
-        <EditText
-            android:id="@+id/etUsernameMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="12"
-
-            android:hint="username"
-            android:inputType="textEmailAddress"
-            android:minHeight="48dp" />
-
-        <EditText
-            android:id="@+id/etPasswordMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="12"
-            android:hint="pass"
-            android:inputType="textPassword"
-            android:minHeight="48dp"
-            tools:layout_editor_absoluteX="10dp"
-            tools:layout_editor_absoluteY="70dp" />
-
-        <Button
-            android:id="@+id/btnLoginMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="login"
-            android:text="Login/signup"
-            tools:layout_editor_absoluteX="200dp"
-            tools:layout_editor_absoluteY="100dp" />
-
-        <Button
-            android:id="@+id/button4"
-            android:onClick="GotoSelection"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Selection"
-
-            />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnSelectionMain"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="250dp"
+        android:backgroundTint="#E40000"
+        android:text="Selection Page"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginMain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
