--- a/app/src/main/res/layout/activity_tutorial1.xml
+++ b/app/src/main/res/layout/activity_tutorial1.xml
@@ -22,4 +22,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/opening2" />
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/tutoriall1"
+
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
