--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,19 @@
         android:layout_marginStart="250dp"
         android:backgroundTint="#E40000"
         android:text="Selection Page"
+        android:onClick="GotoSelection"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLoginMain" />
+
+    <Button
+        android:id="@+id/btnSignupMain"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="250dp"
+        android:backgroundTint="#E40000"
+        android:text="Signup"
+        android:onClick="GotoSelection"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSelectionMain" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
