--- a/app/src/main/res/layout/activity_tutorial1.xml
+++ b/app/src/main/res/layout/activity_tutorial1.xml
@@ -12,24 +12,27 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/starto"
-        tools:layout_editor_absoluteX="-120dp"
-        tools:layout_editor_absoluteY="١١٤dp" />
+        android:layout_marginEnd="224dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/starto" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:backgroundTint="#E40000"
         android:text="Next page"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="360" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tutoriall1"
-        tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginStart="265dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:srcCompat="@drawable/tutoriall1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
