--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -35,6 +35,7 @@
         android:backgroundTint="#E40000"
         android:onClick="GotoTutorial"
         android:text="tutorial"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -46,6 +47,7 @@
         android:backgroundTint="#E40000"
         android:onClick="GotoLogin"
         android:text="Back"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
