--- a/app/src/main/res/layout/activity_tutorial2.xml
+++ b/app/src/main/res/layout/activity_tutorial2.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#000000"
+    android:foregroundTint="#000000"
     tools:context=".Tutorial2">
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/starto"
-        tools:layout_editor_absoluteX="-120dp"
-        tools:layout_editor_absoluteY="١١٤dp" />
+        tools:layout_editor_absoluteX="-120dp" />
 
     <Button
         android:id="@+id/button4"
