--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:layout_marginStart="250dp"
         android:backgroundTint="#E40000"
         android:text="Signup"
-        android:onClick="GotoSelection"
+        android:onClick="GotoSignUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSelectionMain" />
 
