--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_marginStart="250dp"
         android:backgroundTint="#E40000"
         android:text="Selection Page"
-        android:onClick="GotoSelection"
+        android:onClick="gotoSelection"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLoginMain" />
 
