--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -6,12 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Test">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/retry"
+        tools:layout_editor_absoluteX="500dp"
+        tools:layout_editor_absoluteY="155dp" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_editor_absoluteY="220dp"
-        app:layout_editor_absoluteX="540dp"
-        />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="50" />
 </androidx.constraintlayout.widget.ConstraintLayout>
