--- a/app/src/main/res/layout/activity_tutorial1.xml
+++ b/app/src/main/res/layout/activity_tutorial1.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#050505"
-    android:foregroundTint="#000000"
+    android:background="#050505"
     tools:context=".Tutorial1">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/starto"
-        tools:layout_editor_absoluteX="-120dp"
-        tools:layout_editor_absoluteY="١١٤dp" />
+        android:layout_width="350dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.027"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498"
+        app:srcCompat="@drawable/starto" />
 
     <Button
         android:id="@+id/button4"
@@ -22,14 +25,22 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#E40000"
         android:text="Next page"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="360" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tutoriall1"
-        tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_width="350dp"
+        android:layout_height="450dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.956"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.044"
+        app:srcCompat="@drawable/tutoriall1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
