Hi Mr.Rock! Today I have fixed the issue with tutorial pages. and now they fuction pretty well! I fixed the vaccine or @drawable/covidkiller 's desgin And last thing is that I made a button in Selection page that takes you to a recyclerview of player's scores the page opens perfectly though it's empty!

--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -51,4 +51,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="179dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="1dp"
+        android:backgroundTint="#E40000"
+        android:text="Scores"
+        android:onClick="GoToScores"
+        android:textColor="#FAFAFA"
+        android:textColorHighlight="#00FFFFFF"
+        android:textColorLink="#D60606"
+        app:layout_constraintStart_toStartOf="@id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        tools:layout_editor_absoluteX="275dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
