--- a/app/src/main/res/layout/activity_tutorial2.xml
+++ b/app/src/main/res/layout/activity_tutorial2.xml
@@ -4,17 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#000000"
+    android:background="#000000"
+    android:backgroundTint="@color/black"
     android:foregroundTint="#000000"
     tools:context=".Tutorial2">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.027"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/starto"
-        tools:layout_editor_absoluteX="-120dp" />
+        app:layout_constraintVertical_bias="0.498"
+        app:srcCompat="@drawable/starto" />
 
     <Button
         android:id="@+id/button4"
@@ -22,15 +27,36 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#E40000"
         android:text="Next page"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="360" />
+        android:onClick="GotoPage3"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView3"
+        android:layout_width="350dp"
+        android:layout_height="450dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.956"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.044"
+        app:srcCompat="@drawable/warning2" />
+    <Button
+        android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tutoriall2"
-        tools:layout_editor_absoluteX="260dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginBottom="6dp"
+        android:backgroundTint="#E40000"
+        android:text=" previous"
+        android:onClick="GotoPrevious"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintStart_toStartOf="@id/button4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
